2012-03-06  David Grogan  <dgrogan@chromium.org>

        IndexedDB: Check WebCommonWorkerClient::allowIndexedDB before proceeding from a shared worker
        https://bugs.webkit.org/show_bug.cgi?id=79954

        Tests: The 'allow' case will be tested once the patch at
        http://webkit.org/b/80189 and
        https://chromiumcodereview.appspot.com/9585031/ both land. Bug for
        testing the 'deny' case is http://crbug.com/113738.

        Reviewed by Tony Chang.

        * public/WebCommonWorkerClient.h:
        (WebKit::WebCommonWorkerClient::allowDatabase):
        (WebKit::WebCommonWorkerClient::allowFileSystem):
        (WebKit::WebCommonWorkerClient::openFileSystem):
        (WebCommonWorkerClient):
        (WebKit::WebCommonWorkerClient::allowIndexedDB):
        * public/WebSharedWorkerClient.h:
        (WebSharedWorkerClient):
        * src/IDBFactoryBackendProxy.cpp:
        (WebKit::AllowIndexedDBMainThreadBridge::create):
        (WebKit::AllowIndexedDBMainThreadBridge::cancel):
        (WebKit::AllowIndexedDBMainThreadBridge::signalCompleted):
        (WebKit::AllowIndexedDBMainThreadBridge::AllowIndexedDBMainThreadBridge):
        (WebKit::AllowIndexedDBMainThreadBridge::allowIndexedDBTask):
        (AllowIndexedDBMainThreadBridge):
        (WebKit::IDBFactoryBackendProxy::allowIDBFromWorkerThread):
        * src/WebWorkerClientImpl.cpp:
        (WebKit):
        (WebKit::WebWorkerClientImpl::allowIndexedDB):
        * src/WebWorkerClientImpl.h:
        (WebWorkerClientImpl):

2012-03-06  Stephen White  <senorblanco@chromium.org>

        Unreviewed, rolling out r109825.
        http://trac.webkit.org/changeset/109825
        https://bugs.webkit.org/show_bug.cgi?id=79413

        Broke webkit_unit_tests on Chromium Win

        * WebKit.gypi:
        * tests/LevelDBTest.cpp: Removed.

2012-03-06  Takashi Toyoshima  <toyoshim@chromium.org>

        [Chromium] [WebSocket] Add WebSocket extensions query WebKit API