@@ -1,5 +1,17 @@
 2012-03-06  David Grogan  <dgrogan@chromium.org>
 
+        [Chromium] Add OVERRIDEs to WebWorkerClientImpl.h
+        https://bugs.webkit.org/show_bug.cgi?id=80434
+
+        Reviewed by Tony Chang.
+
+        Tests: just that it compiles.
+
+        * src/WebWorkerClientImpl.h:
+        (WebWorkerClientImpl):
+
+2012-03-06  David Grogan  <dgrogan@chromium.org>
+
         IndexedDB: Check WebCommonWorkerClient::allowIndexedDB before proceeding from a shared worker
         https://bugs.webkit.org/show_bug.cgi?id=79954
 
